--- a/src/app/shared/components/navbar/navbar.scss
+++ b/src/app/shared/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(to right, red, blue);
+    background: linear-gradient(to right, #0077B6, #023E8A);
     color: white;
     padding: 1rem 2rem;
     display: flex;
