--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <img src="Bookify\src\assets\logoynombre.png" alt="logo" class="logo">
+    <img src="assets/logoynombre.png" alt="logo">
     <ul>
         <li><a href="/home">inicio</a></li>
         <li><a href="">mis reservas</a></li>
