--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,8 +1,9 @@
 <nav class="navbar">
     <img src="assets/logoynombre.png" alt="logo">
     <ul>
-        <li><a href="/home">inicio</a></li>
-        <li><a href="">mis reservas</a></li>
-        <li><a href="">login</a></li>
+        <li><a routerLink="/" routerLinkActive="active">inicio</a></li>
+        <li><a routerLink="/reservas" routerLinkActive="active">mis reservas</a></li>
+        <li><a routerLink="/contacto">contacto</a></li>
     </ul>
+  
 </nav>
