--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -1,20 +1,71 @@
-.hero {
-    text-align: center;
-    background-color: #023E8A;
-    margin-top: 9%;
-    width: 100%;
-    padding: 1rem;
+h1, p {
+    color: white;
 }
+.hero {
+    position: relative;
+    text-align: center;
+    background: linear-gradient(to right,  #0077B6, #023E8A);
+    margin-top: 6.2%;
+    padding: 4rem;
+    width: 92.1%;
+    left: 0;
+    margin-left: calc(-50vw + 50%);
+}
+
+.search-container {
+    background-color: white;
+    border-radius: 0.5rem;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+    padding: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 60%;
+    margin-left: 20%;
+}
+
+.search-input {
+   width: 50%;
+   height: 40px;
+   border-radius: 10px;
+   border-style: none;
+   padding-left: 2.5rem;
+   color: #1f2937;
+   background-color: #cedef3;
+}
+
 
 button {
     background-color: #FF9E00;
-    color: white;
     border: none;
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 1.5rem;
     border-radius: 8px;
     cursor: pointer;
 }
 
 button:hover {
     background-color: #FF6D00;
+}
+
+.bi-search-heart {
+    color: #1f2937;
+    font-size: 25px;
+}
+
+.content {
+ margin-top: 5%;
+}
+
+.business-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+  gap: 2rem;
+  justify-content: center;
+  margin-top: 3rem;
+  padding: 2rem;
+}
+
+app-business-card {
+  flex: 1 1 300px;
+  max-width: 350px;
 }
