--- a/src/app/shared/components/navbar/navbar.scss
+++ b/src/app/shared/components/navbar/navbar.scss
@@ -1,3 +1,8 @@
+.navbar * {
+  box-sizing: border-box;
+}
+
+
 .navbar {
     background: linear-gradient(to right, #0077B6, #023E8A);
     color: white;
@@ -5,14 +10,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 5px 5px 10px #4543c5;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
     position: fixed;
     top: 0;
     left: 0;
-    width: 95%; 
+    width: 96%; 
+    height: 10%;
     z-index: 1000;
 }
-
+img {
+  margin-top: 1%;
+  width: 19%;
+  height: auto;
+  margin-left: 5%;
+}
 .navbar ul {
     list-style: none;
     display: flex;
@@ -22,8 +33,22 @@
 .navbar a {
     color: white;
     text-decoration: none;
+    transition: color 0.3s;
+    font-size: 1.3rem;
+    transition: 0.3s;
+    border-radius: 10px;
 }
 
 .navbar a:hover {
     text-decoration: underline;
+    color: #FF9E00;
+    background-color: #fff5ed49;
+}
+
+@media (max-width: 768px) {
+
+  .navbar-logo img {
+    max-width: 120px;
+    height: auto;
+  }
 }
