--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -1,4 +1,6 @@
-h1, p {
+
+* {
+    font-family: sans-serif;
     color: white;
 }
 .hero {
@@ -36,11 +38,12 @@ h1, p {
 
 
 button {
-    background-color: #FF9E00;
+    background-color: #ff9d00;
     border: none;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1rem;
     border-radius: 8px;
     cursor: pointer;
+    margin-left: 1rem;
 }
 
 button:hover {
@@ -50,6 +53,7 @@ button:hover {
 .bi-search-heart {
     color: #1f2937;
     font-size: 25px;
+    
 }
 
 .content {
