--- a/src/app/shared/components/navbar/navbar.scss
+++ b/src/app/shared/components/navbar/navbar.scss
@@ -1,5 +1,7 @@
 .navbar * {
   box-sizing: border-box;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
 }
 
 
@@ -34,7 +36,7 @@ img {
     color: white;
     text-decoration: none;
     transition: color 0.3s;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     transition: 0.3s;
     border-radius: 10px;
 }
