agrege el panel-admin

--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -4,6 +4,7 @@
         <li><a routerLink="/" routerLinkActive="active">inicio</a></li>
         <li><a routerLink="/reservas" routerLinkActive="active">mis reservas</a></li>
         <li><a routerLink="/contacto">contacto</a></li>
+        <li><a routerLink="/admin-panel" routerLinkActive="active"></a>admin panel</li>
     </ul>
   
 </nav>
